--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -162,6 +162,10 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
     </table>
 </div>
 
+
+<div class="span8">
+    <strong>Work time-color intervals</strong>
+</div>
 <div class="span8">
     <table class="table table-bordered statuses-table">
         <thead>
@@ -306,7 +310,7 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
 
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary button-submit" data-form="form-edit-status">Save</button>
+        <button type="button" class="btn btn-primary button-submit" data-form="form-interval-status">Save</button>
     </div>
 </div>
 
