--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,13 +155,13 @@ form.form-mini {
     border: 3px solid #cd5c5c;
 }
 .even-week-row {
-    background-color: #333;
+    background-color: #BA3018;
 }
 .odd-week-row {
-    background-color: #999;
+    background-color: #BA3018;
 }
 .even-week-row .separator, .odd-week-row .separator {
-    color: #fff;
+    color: #BA3018;
 }
 .separator, .input-time {
     float: left;
